--- a/pretty.css
+++ b/pretty.css
@@ -12,15 +12,15 @@ body{
   align-items: center;
   justify-content: center;
   min-height: 100vh;
-  background: #696969;
+  background: #00539C;
 }
 ::selection{
   color: #fff;
-  background: #17A2B8;
+  background: #EEA47F;
 }
 .wrapper{
-  width: 770px;
-  padding: 35px;
+  width: 1500px;
+  padding: 50px;
   background: #fff;
   border-radius: 10px;
   box-shadow: 0 10px 15px rgba(0,0,0,0.05);
@@ -33,7 +33,7 @@ body{
 .wrapper .content-box{
   padding: 13px 20px 0;
   border-radius: 10px;
-  border: 1px solid #bfbfbf;
+  border: 1px solid #f5f5dc;
 }
 .content-box .typing-text{
   overflow: hidden;
@@ -88,7 +88,7 @@ body{
   flex-wrap: wrap;
   align-items: center;
   justify-content: space-between;
-  border-top: 1px solid #bfbfbf;
+  border-top: 1px solid #f5f5dc;
 }
 .content button{
   outline: none;
@@ -99,7 +99,7 @@ body{
   font-size: 16px;
   cursor: pointer;
   border-radius: 5px;
-  background: #17A2B8;
+  background: #EEA47F;
   transition: transform 0.3s ease;
 }
 .content button:active{
